--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.1",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
-    "@angular/forms": "~8.0.1",
+    "@angular/fire": "^5.3.0",
+    "@angular/forms": "^8.0.3",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
+    "@angular/pwa": "^0.803.22",
     "@angular/router": "~8.0.1",
+    "@angular/service-worker": "~8.0.1",
+    "@ngrx/store": "^8.6.0",
+    "firebase": "^7.6.2",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
     "rxjs": "~6.4.0",
+    "safe-url-assembler": "^1.3.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
